# ratisui

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: aarch64-musl.yml  aarch64.yml  build-macos.yml  build-specified-target.yml  debug-macos.yml  post-release-action.yml  pre-release.yml  release.yml  rust.yml  winget.yml
assets/: theme-template.ron
deadpool-redis/: .gitignore  Cargo.toml  README.md
deadpool-redis/src/: lib.rs
deadpool-redis/src/cluster/: mod.rs
deadpool-redis/src/sentinel/: mod.rs
examples/: build_redis_doc_json.rs  cmd_macro.rs  completions.rs  draw_widget.rs  java_deserialization.rs  paragraph.rs  protobuf.rs  redis_cli_completions.rs  redis_client.rs  redis_stream.rs  redis_value_to_ron.rs  ssh_tunnel.rs  theme.rs  watch.rs
examples/common/: client.rs  lib.rs
jaded/: Cargo.toml
jaded/src/: annotations.rs  convert.rs  error.rs  internal.rs  lib.rs
ratisui-core/: Cargo.toml
ratisui-core/src/: bus.rs  cli.rs  configuration.rs  constants.rs  highlight_value.rs  input.rs  lib.rs  marcos.rs  mouse.rs  notify_mutex.rs  redis_opt.rs  serde_wrapper.rs  ssh_tunnel.rs  theme.rs  utils.rs
ratisui-deadpool-redis/: Cargo.toml
ratisui-deadpool-redis/src/: lib.rs
ratisui-deadpool-redis/src/sentinel/: mod.rs
ratisui-macros/: Cargo.toml
ratisui-macros/src/: lib.rs
ratisui-tree-sitter-ron/bindings/rust/: lib.rs
ratisui-widget/: Cargo.toml
ratisui-widget/src/: fps.rs  lib.rs  popup.rs
scripts/: install.sh
src/: app.rs  bus.rs  cli.rs  configuration.rs  context.rs  input.rs  key_utils.rs  lib.rs  main.rs  marcos.rs  notify_mutex.rs  redis_opt.rs  ssh_tunnel.rs  theme.rs  tui.rs  utils.rs
src/components/: app_configuration_editor.rs  cmd_viewer.rs  completion.rs  console_output.rs  create_key_editor.rs  database_editor.rs  fps.rs  ft_search_panel.rs  hash_table.rs  highlight_value.rs  list_list.rs  list_row.rs  list_table.rs  mod.rs  popup.rs  raw_paragraph.rs  raw_value.rs  redis-cmd.json  redis_cli.rs  server_switcher.rs  servers.rs  set_table.rs  stream_view.rs  time_series_table.rs  zset_table.rs
src/tabs/: cli.rs  explorer.rs  logger.rs  mod.rs  profiler.rs
tree-sitter-ron/: .cargo_vcs_info.json  Cargo.toml
