[package]
name = "ratisui"
version = "0.3.1"
edition = "2021"
authors = ["honhimw <honhimw@outlook.com>"]
rust-version = "1.83.0"
build = "build.rs"

[workspace]
members = ["ratisui-core", "ratisui-macros"]

[workspace.dependencies]
anyhow = "1"
log = "0.4"
redis = "0.27"
serde = "1"
serde_json = "1"
tokio = "1"
tree-sitter = "0.24"
crossbeam-channel = "0.5"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
bitflags = "2"

ratatui = { version = "0.29", features = [
    "unstable-rendered-line-info",
    "unstable-widget-ref",
    "macros",
] }
ratatui-macros = "0.6.0"
tui-textarea = { version = "0.7", features = ["crossterm"] }
throbber-widgets-tui = "0.8"
tui-tree-widget = "0.23.0"
tui-logger = "0.14"

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

crossbeam-channel = { workspace = true }

redis = { workspace = true, features = [
    "tokio-comp",
    "tokio-rustls-comp",
    "cluster-async",
    "json"
] }

strum = "0.26.3"
uuid = { version = "1.11.0", features = ["v4"] }
tokio = { workspace = true, features = ["full"] }
chronoutil = "0.2.7"
itertools = "0.14.0"
unicode-width = "0.2.0"
substring = "1"
once_cell = "1"
futures = "0.3"

ratisui-core = { path = "ratisui-core" }

#[build-dependencies]
#cc = "*"

[dev-dependencies]
ron = { version = "0.8.1", features = ["default"] }
deadpool-redis = { git = "https://github.com/honhimW/deadpool.git", branch = "logging", package = "deadpool-redis", features = [
    "serde",
    "cluster",
    "log",
] }
jaded = { version = "0.5.0", features = ["serde"] }
protobuf = { version = "3.7.1" }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = "debuginfo"
