[package]
name = "ratisui"
version = {workspace = true}
edition = "2024"
authors = ["honhimw <honhimw@outlook.com>"]
rust-version = {workspace = true}
build = "build.rs"

[workspace.package]
version = "0.5.1"
rust-version = "1.87.0"

[workspace]
members = ["ratisui-core", "ratisui-macros"]

[workspace.dependencies]
anyhow = "1"
log = "0.4"
serde = "1"
serde_json = "1"
tokio = "1"
tree-sitter = "0.24"
crossbeam-channel = "0.5"
strum = "0.27.0"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
bitflags = "2"

ratatui = { version = "0.29", features = [
    "unstable-rendered-line-info",
    "unstable-widget-ref",
    "macros",
] }
ratatui-macros = "0.6.0"
tui-textarea = { version = "0.7", features = ["crossterm"] }
throbber-widgets-tui = "0.8"
tui-tree-widget = "0.23.0"
tui-logger = "0.17"

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

crossbeam-channel = { workspace = true }

deadpool-redis = { git = "https://github.com/honhimW/deadpool.git", branch = "logging", package = "deadpool-redis" }

strum = { workspace = true, features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4"] }
tokio = { workspace = true, features = ["full"] }
chronoutil = "0.2.7"
itertools = "0.14.0"
unicode-width = "0.2.0"
substring = "1"
once_cell = "1"
futures = "0.3"

ratisui-core = { path = "ratisui-core" }

#[build-dependencies]
#cc = "*"

[dev-dependencies]
ron = { version = "0.10.1", features = ["default"] }
deadpool-redis = { git = "https://github.com/honhimW/deadpool.git", branch = "logging", package = "deadpool-redis", features = [
    "serde",
    "cluster",
    "tokio-comp",
    "cluster-async",
    "streams",
    "log",
    "json"
] }
jaded = { version = "0.5.0", features = ["serde"] }
protobuf = { version = "3.7.1" }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"
serde_yaml = "0.9.34"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
#strip = "debuginfo"
strip = "symbols"
panic = "abort"

