[package]
name = "deadpool-redis"
version = "0.1.0"
edition = "2021"

[dependencies.deadpool]
version = "0.12.0"
features = ["managed"]
default-features = false

[dependencies.redis]
workspace = true
features = ["aio"]
default-features = false

[dependencies.log]
workspace = true
optional = true

[dependencies.serde]
workspace = true
features = ["derive"]
optional = true
package = "serde"

[dependencies.tokio]
workspace = true
optional = true
default-features = false

[dev-dependencies.config]
version = "0.14"
features = ["json"]

[dev-dependencies.dotenvy]
version = "0.15.0"

[dev-dependencies.futures]
version = "0.3.15"

[dev-dependencies.redis]
workspace = true
features = ["tokio-comp"]
default-features = false

[dev-dependencies.tokio]
workspace = true
features = [
    "macros",
    "rt-multi-thread",
    "sync",
]

[features]
cluster = ["redis/cluster-async"]
default = ["rt_tokio_1"]
rt_async-std_1 = [
    "deadpool/rt_async-std_1",
    "redis/async-std-comp",
]
rt_tokio_1 = [
    "deadpool/rt_tokio_1",
    "redis/tokio-comp",
]
sentinel = [
    "redis/sentinel",
    "tokio/sync",
]
serde = [
    "deadpool/serde",
    "dep:serde",
]
log = ["dep:log"]
