[package]
name = "ratisui-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "ratisui_core"

[dependencies]
anyhow = "1"
log = { workspace = true }

ratatui = { version = "0.29", features = [
    "unstable-rendered-line-info",
    "macros",
] }
tui-textarea = { version = "0.7", features = ["crossterm"] }

serde = { workspace = true, features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"

deadpool-redis = { git = "https://github.com/honhimW/deadpool.git", branch = "logging", package = "deadpool-redis", features = [
    "serde",
    "cluster",
    "tokio-comp",
    "cluster-async",
    "streams",
    "log",
    "json"
] }

strum = { workspace = true }
ron = { version = "0.10.1", features = ["default"] }
dirs = "6.0.0"
base64 = "0.22.1"
clap = { version = "4.5", features = ["cargo"] }
tokio = { workspace = true, features = ["full"] }
chrono = "0.4.39"
itertools = "0.14.0"
once_cell = "1"
futures = "0.3"

jaded = { version = "0.5.0", features = ["serde"] }
protobuf = { version = "3.7.1" }

tree-sitter = { workspace = true}
tree-sitter-highlight = "0.25"
tree-sitter-json = "0.24"
tree-sitter-html = { git = "https://github.com/honhimW/tree-sitter-html" }
tree-sitter-ron = { git = "https://github.com/honhimW/tree-sitter-ron" }
russh = { version = "0.52.0", default-features = false }
paste = "1"
ratisui-macros = { path = "../ratisui-macros" }
