[package]
name = "ratisui-core"
version.workspace = true
edition.workspace = true

[lib]
name = "ratisui_core"

[dependencies]
anyhow = "1"
log.workspace = true

ratatui = { version = "0.29", features = [
    "unstable-rendered-line-info",
    "macros",
] }
tui-textarea = { version = "0.7", features = ["crossterm"] }

serde = { workspace = true, features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"

deadpool-redis = { workspace = true, features = [
    "serde",
    "cluster",
    "tokio-comp",
    "streams",
    "json"
] }

strum = { workspace = true, features = ["derive"] }
ron.workspace = true
dirs = "6.0.0"
base64 = "0.22.1"
hex = "0.4.3"
clap = { version = "4.5", features = ["cargo", "derive"] }
tokio = { workspace = true, features = ["full"] }
chrono = "0.4"
itertools = "0.14.0"
once_cell = "1"
futures = "0.3"

jaded = { version = "0.5.0", features = ["serde"] }
protobuf = { version = "3.7.1" }

tree-sitter.workspace = true
tree-sitter-highlight = "0.24"
tree-sitter-json = "0.24"
tree-sitter-html = { git = "https://github.com/honhimW/tree-sitter-html" }
tree-sitter-ron = { git = "https://github.com/honhimW/tree-sitter-ron" }
russh = { version = "0.55", default-features = false, features = ["flate2", "ring", "rsa"] }
paste = "1"
ratisui-macros = { path = "../ratisui-macros" }
